--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 blinker==1.8.2
 click==8.0.1
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
+Flask>=2.2.5,<3.0
+Flask-SQLAlchemy>=3.0,<3.1
 greenlet==3.0.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
-MarkupSafe==2.0.1
-psycopg2==2.9.1
-SQLAlchemy==1.4.18
-Werkzeug==2.0.1
+MarkupSafe>=2.1.1,<3.0
+psycopg2>=2.9.6
+SQLAlchemy>=1.4.48,<2.1
+Werkzeug>=2.2.2,<3.0
